[package]
name = "Cocytus"
version = "0.1.1"
edition = "2024"
description = "Windows symbols extracting tool"
authors = ["I3r1h0n"]

[dependencies]
ureq = "3"
iced = { version = "0.13", features = ["tokio", "lazy", "advanced", "svg", "image"] }
rfd = "0.15"
pdb = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
